<resources>
    <string name="app_name">Proinfem</string>
    <string name="title_activity_contact">Mis contactos</string>
    <string name="app_title_update">Actualizando usuario.</string>
    <string name="short_content_people">Ver</string>
    <string name="edit_people">Editar</string>
    <string name="delete_people">Eliminar</string>
    <string name="view_state">Estado</string>
    <string name="report_planned_date">Fecha de nacimiento (dd/MM/YY)</string>

    <!-- Stepper Complaint -->
    <string name="stepper_complaint_user">Usuario</string>
    <string name="stepper_userfirsname">Nombres</string>
    <string name="stepper_userlastname">Apellidos</string>
    <string name="stepper_userci">CI</string>
    <string name="stepper_usercell_phone">Celular</string>
    <string name="middle_userdates">Acerca de mi.</string>
    <string name="stepper_userdata_birth">Fecha de nacimiento</string>
    <string name="stepper_useremail">Correo</string>
    <string name="stepper_usertelephone_private">Telefono fijo</string>
    <string name="stepper_useraddress">Direccion</string>
    <string name="stepper_userstate">Estado</string>
    <string name="stepper_aggress">Agresor</string>

    <!-- Stepper Aggressions -->
    <string name="stepper_type_aggression_description">De que agresion(es) fui victima.</string>
    <string name="stepper_type_aggression">Tipo de agresion</string>

    <!-- Stepper Complaint -->
    <string name="stepper_complaint">Mi denuncia</string>
    <string name="stepper_complaint_user_coverage">Cobertura de salud</string>
    <string name="stepper_complaint_user_coverage_public">Publico</string>
    <string name="stepper_complaint_user_coverage_private">Privado</string>
    <string name="stepper_complaint_user_link">Vinculo con el agresor</string>
    <string name="stepper_complaint_user_description">Descripcion de la denuncia</string>
    <string name="stepper_complaint_save">Enviar denuncia</string>
    <string name="complaint_title">Mi denuncia</string>
    <string name="app_menu_privacy">Politicas de privacidad</string>

    <string name="navigation_drawer_open">Abrir navegacion.</string>
    <string name="navigation_drawer_close">Cerrar navegacion.</string>
    <string name="app_menu_about">Acerca de.</string>
    <string name="app_menu_exit">Salir</string>
    <string name="app_config_denuncia">VOZ</string>
    <string name="say_save">GUARDAR</string>
    <string name="say_cancel">CANCELAR</string>
    <string name="content_help">AYUDA</string>
    <string name="username_profile">Nombres</string>
    <string name="login_register_before">No tienes una cuenta?,</string>
    <string name="login_register_after">Crea uno aqui.</string>

    <!-- Form Register Validation -->
    <string name="errorFirsname">Ingrese nombre.</string>
    <string name="errorEmail">Email invalido.</string>
    <string name="lessEmail">Ingrese su Email.</string>
    <string name="errorLastname">Ingrese apellidos.</string>
    <string name="errorAddress">Ingrese direccion.</string>
    <string name="errorPasword">Ingrese su contraseña.</string>
    <string name="errorPaswordLength">Debe ingresar como minimo 6 caracteres.</string>
    <string name="errorConfPasword">Contraseña incorrecta.</string>
    <string name="errorPhone">Introdusca su numero de telefono particular.</string>
    <string name="errorPhoneLength">Numero incorrecto.</string>
    <string name="errorCel">Introdusca su numero de telefono celular.</string>
    <string name="errorDate">Introduce tu fecha de nacimiento.</string>
    <string name="errorCi">Introduce tu documento de identidad.</string>
    <string name="profile_logo">Mi fotografia.</string>
    <string name="priority_contact_sms">Mandar mensaje de ayuda a este contacto.</string>
    <string name="working">Proinfem</string>
    <string name="name_user">Nombre de usuario</string>
    <string name="msg_user">Escribe tu mensaje</string>
    <string name="msg_user_send">Enviar</string>
    <string name="welcome">Vienvenido</string>

</resources>
