<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xlarge"
                    android:text="Julianna Carter"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/grey_90" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/profile_logo"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/grey_60" />

            <LinearLayout
                    android:id="@+id/layout_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:gravity="center"
                    android:orientation="horizontal">



                <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/photo_female_5"
                        app:civ_border="true"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="2dp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:orientation="vertical">

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_10" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/spacing_large"
                        android:paddingTop="@dimen/spacing_large">

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/stepper_userfirsname"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:textColor="@color/purple_500" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:text="firsname auth"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_60" />

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                        <TextView
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/stepper_userlastname"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:textColor="@color/purple_500" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:text="lastname auth"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_60" />

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                        <TextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/stepper_usercell_phone"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:textColor="@color/purple_500" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:text="cell auth"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_60" />

                    </LinearLayout>

                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_10" />

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xlarge"
                    android:layout_marginRight="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:gravity="center"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/middle_userdates"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_90" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:background="@color/grey_10" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xlarge"
                    android:layout_marginRight="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stepper_userdata_birth"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/purple_500"
                            android:textStyle="bold" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="date auth"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stepper_useremail"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/purple_500"
                            android:textStyle="bold" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="auth.c@mail.com"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xlarge"
                    android:layout_marginRight="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stepper_usertelephone_private"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/purple_500"
                            android:textStyle="bold" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="(auth)77723287"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stepper_userstate"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/purple_500"
                            android:textStyle="bold" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="state auth"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xlarge"
                    android:layout_marginRight="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stepper_userci"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/purple_500"
                            android:textStyle="bold" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="ci auth"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stepper_useraddress"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/purple_500"
                            android:textStyle="bold" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="address auth"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                </LinearLayout>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_mlarge"
            android:clickable="true"
            android:tint="@android:color/white"
            app:backgroundTint="@color/deep_orange_500"
            app:fabSize="normal"
            app:layout_anchor="@id/layout_image"
            app:layout_anchorGravity="bottom|right|end"
            app:srcCompat="@drawable/ic_create" />

</android.support.design.widget.CoordinatorLayout>