<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/overlay_light_90"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/bt_close"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_close" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="120dp"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/photo_female_1"
            app:civ_border_color="@color/overlay_dark_10"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/title_firsname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="People name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/grey_40"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_view_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/btn_rounded_red"
            android:paddingLeft="@dimen/spacing_mlarge"
            android:paddingRight="@dimen/spacing_mlarge"
            android:text="@string/short_content_people"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/spacing_large">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bt_edit_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:background="@drawable/btn_rounded_red"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:paddingRight="@dimen/spacing_mlarge"
                    android:text="@string/edit_people"
                    android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bt_delete_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:background="@drawable/btn_rounded_red"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:paddingRight="@dimen/spacing_mlarge"
                    android:text="@string/delete_people"
                    android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>